# NGO_Oct

./: .env.frontend.production  .env.production.example  .env.sample  .gitignore  CHANGELOG.md  CONTABO_DEPLOYMENT_COMPLETE.md  CONTABO_QUICK_DEPLOY.md  DASHBOARD_FIX.md  DATA_SYNC_FIX.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FOR_TEAMMATES.md  MESSAGE_TO_TEAM.txt  MICROSITE_FIX.md  NO_HARDCODED_VALUES.md  PULL_REQUEST_SUMMARY.md  README.md  RUN.md  SETUP_COMPLETE.md  START_APP.md  TEAM_SETUP.md  TEAM_SETUP_GUIDE.md  TEST_RESULTS.md  USER_ROLE_FIX.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.example  env.template  environment-config.txt  index.html  init.sql  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  seed.py  (+8 more)
app/: __init__.py  auth.py  deps.py  main.py  middleware.py  models.py  schemas.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: donations.py  ngo_receipts.py  payouts.py  public.py  uploads.py  vendors.py
app/core/: __init__.py  config.py
app/middleware/: __init__.py
app/models/: __init__.py
app/routers/: admin.py  auth.py  demo.py  donations.py  ngo_receipts.py  payouts.py  public.py  uploads.py  vendors.py
app/schemas/: __init__.py
app/services/: payment.py  payouts.py  storage.py
deploy/: DEPLOYMENT_STEPS.md  QUICK_REFERENCE.md  README.md  contabo_setup.sh  deploy_app.sh  setup_ssl.sh  update_app.sh  verify_deployment.sh
migrations/: env.py
migrations/versions/: 0001_initial_migration.py
public/: ICONS_README.md  manifest.json
src/: App.tsx
src/api/: client.ts
src/auth/: AuthContext.tsx
src/components/: AppShell.tsx  DataTable.tsx  LoadingSpinner.tsx
src/contexts/: ModeContext.tsx
src/pages/: AdminConsole.tsx  CauseDetail.tsx  DemoLogin.tsx  DonorDashboard.tsx  Login.tsx  MarketplaceHome.tsx  NgoDashboard.tsx  NgoMicrosite.tsx  NgoPage.tsx  VendorPortal.tsx
src/theme/: index.ts
tests/: __init__.py  test_auth.py  test_donations.py  test_main.py  test_misc.py  test_public.py  test_vendors.py
